# vertices_to_h5m

./: .gitignore  README.md  build.sh  pyproject.toml  setup.cfg  test_h5m_files.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: anaconda-publish.yml  ci_with_examples.yml  ci_with_install.yml  conda-build-test.yml
conda/: meta.yaml
examples/: example_single_volume_h5py.py  example_two_volume_h5py.py  example_two_volume_pymoab.py  mesh_with_both_methods.py  one_volume_cadquery_tesselation.py  one_volume_mesh.py  two_tets.py  two_volume_mesh.py
tests/: test_package.py
vertices_to_h5m/: __init__.py  core.py
