[metadata]
name = vertices_to_h5m
version = attr: vertices_to_h5m.__version__
author = The vertices_to_h5m Development Team
author_email = mail@jshimwell.com
description = Converts mesh vertices and connectivity to h5m geometry files compatible with DAGMC simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/vertices_to_h5m
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/vertices_to_h5m
    Tracker = https://github.com/fusion-energy/vertices_to_h5m/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    trimesh
    networkx
    scipy  # trimesh makes use of scipy to fix normals in some cases
    # moab is also not available on pypi but can be installed with conda

[options.extras_require]
tests = 
    pytest >= 5.4.3
    dagmc_h5m_file_inspector # requires moab which can be installed with conda
    openmc_data_downloader
    # openmc is also needed but not available via pip

[flake8]
per-file-ignores = __init__.py:F401
